# ohjelmistotuotanto

./: README.md
palautukset/viikko1/nhl-statistics-1/src/: index.py  sort_by.py  statistics.py
palautukset/viikko1/nhl-statistics-1/src/tests/: statistics_test.py
palautukset/viikko2/: haara2.txt
palautukset/viikko2/poetry-web/: pyproject.toml
palautukset/viikko2/project-reader/src/: project_reader.py
palautukset/viikko2/verkkokauppa-1/src/: kauppa.py  varasto.py  viitegeneraattori.py
palautukset/viikko3/login-robot/src/: app.py
palautukset/viikko3/login-robot/src/services/: user_service.py
palautukset/viikko3/login-robot/src/tests/: login.robot  register.robot
palautukset/viikko3/nhl-reader/src/: index.py  player.py  player_reader.py  player_stats.py
palautukset/viikko3/web-login-robot/src/services/: user_service.py
palautukset/viikko3/web-login-robot/src/tests/: login.robot  (+1 more)
palautukset/viikko4/: file.md  retro.md
palautukset/viikko4/tdd-ostoskori/src/: ostos.py  ostoskori.py
palautukset/viikko4/verkkokauppa/: .gitignore  pyproject.toml
palautukset/viikko5/int-joukko/src/: int_joukko.py
palautukset/viikko5/laskin/src/: kayttoliittyma.py
palautukset/viikko5/tennis/src/: tennis_game.py
palautukset/viikko6/: pull.md
palautukset/viikko6/query-language/src/: index.py  matchers.py  query_builder.py
palautukset/viikko7/: merge.md
palautukset/viikko7/kivi-paperi-sakset/: pyproject.toml
palautukset/viikko7/kivi-paperi-sakset/src/: index.py  kps.py  kps_parempi_tekoaly.py  kps_pelaaja_vs_pelaaja.py  kps_tekoaly.py  peli.py  tuomari.py
(+3 files in other folders)
